--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,28 @@
 
 # debug information files
 *.dwo
+
+# Visual Studio temporary files
+*.ipch
+*.sdf
+*.aps
+*.ncb
+*.opendb
+*.VC.db
+
+# User-specific files
+*.user
+*.userosscache
+*.sln.docstates
+
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+bld/
+[Bb]in/
+[Oo]bj/
+[Ll]og/
