--- a/BubbleSimulation.vcxproj
+++ b/BubbleSimulation.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="bubblegenerator.cpp" />
+    <ClCompile Include="bubblepool.cpp" />
     <ClCompile Include="bubblerenderer.cpp" />
     <ClCompile Include="bubblesimulator.cpp" />
     <ClCompile Include="fluidgrid2d.cpp" />
