--- a/BubbleSimulation.vcxproj.filters
+++ b/BubbleSimulation.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="bubblesimulator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="bubblepool.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="shader.h">
